# scraperapi-amazon-competitors

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: db.py  llm.py  scraper_api.py  sentence_transform.py
